<resources>
    <string name="app_name">ModernSecurity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="continue_with">Continue with</string>
    <string name="Dont_have_account">Don\'t have an account? <b color="#2F1993">Create One</b></string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="already_have">Already signed up? <b>Login</b></string>
    <string name="reset_password">Reset password</string>
    <string name="an_email_with">An email with a reset link will be sent to the email address.</string>
    <string name="send_code">Send code</string>
    <string name="back_to_login"><b>Back to login</b></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>