<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ResetPassword">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="67dp"
        android:src="@drawable/marj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="#161616"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/an_email_with"
            android:textAlignment="center"
            android:textColor="#161616"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/primary_button"
            android:orientation="horizontal"
            android:padding="3dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/email_address"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="#000A16"
                android:textColorHint="#c8c8c8"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_button"
            android:elegantTextHeight="true"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961">

        <TextView
            android:id="@+id/redirect_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="#2F1993"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>