<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#ffffff"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="#161616"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:padding="3dp"
            android:background="@drawable/primary_button"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:hint="@string/email_address"
                android:textColorHint="#c8c8c8"
                android:paddingStart="24dp"
                android:textColor="#000A16"
                android:elegantTextHeight="true"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:background="@drawable/primary_button"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:hint="@string/password"
                android:textColorHint="#c8c8c8"
                android:paddingStart="24dp"
                android:textColor="#000A16"
                android:elegantTextHeight="true"
                android:textSize="18sp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>