<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/bg_three"
    tools:context=".CreateAccount">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="67dp"
        android:src="@drawable/marj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="#161616"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/primary_button"
            android:orientation="horizontal"
            android:padding="3dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:elegantTextHeight="true"
                android:hint="@string/full_name"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="#000A16"
                android:textColorHint="#c8c8c8"
                android:fontFamily="@font/poppins_light"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_button"
            android:orientation="horizontal"
            android:padding="3dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:elegantTextHeight="true"
                android:hint="@string/email_address"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="#000A16"
                android:textColorHint="#c8c8c8"
                android:fontFamily="@font/poppins_light"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_button"
            android:orientation="horizontal"
            android:padding="3dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:elegantTextHeight="true"
                android:hint="@string/password"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="#000A16"
                android:textColorHint="#c8c8c8"
                android:fontFamily="@font/poppins_light"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_button"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="70dp"
                android:layout_height="2dp"
                android:background="@drawable/grey_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/continue_with"
                android:textAlignment="center"
                android:textColor="#c8c8c8"
                android:textSize="14sp" />

            <View
                android:layout_width="70dp"
                android:layout_height="2dp"
                android:background="@drawable/grey_line" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/primary_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/fb_icon" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/primary_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/g_icon" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/redirect_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have"
        android:textColor="#000A16"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

</androidx.constraintlayout.widget.ConstraintLayout>